--- a/public/css/sliders.css
+++ b/public/css/sliders.css
@@ -113,3 +113,27 @@
   background: #99bb99;
   cursor: pointer;
 }
+
+
+.slider6 {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  border-radius: 5px;  
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  margin-bottom: 10px;
+}
+
+.slider6::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%; 
+  background: #8888aa;
+  cursor: pointer;
+}
